--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,7 @@
     <p>チェックイン数: <%= @range_indexs.size %></p>
     <ol type="A">
       <% @range_indexs.each do |point| %>
-      <li><%= point["name"] %><br><small><%= point["time"] %></small></li>
+      <li><%= point[:name] %><br><small><%= point[:time] %></small></li>
       <% end %>
     </ol>
   </div>
@@ -17,8 +17,8 @@
 <script>
 function initMap() {
   var map = new google.maps.Map(document.getElementById('map'), {
-    zoom: 3,
-    center: {lat: -28.024, lng: 140.887}
+    zoom: 4,
+    center: {lat: 28, lng: 120}
   });
   var labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
   var markers = locations.map(function(location, i) {
