--- a/views/index.erb
+++ b/views/index.erb
@@ -1,10 +1,10 @@
 <div class="content">
   <div class="info">
     <h1><%= @title %></h1>
-    <p>【<%= @from_time %>】 - 【<%= @to_time %>】</p>
+    <p>【<%= @since_time %>】 - 【<%= @until_time %>】</p>
       <form action="/index" method="get">
-        <input type="text" name="from_time" placeholder="XXXX/XX/XX">
-        <input type="text" name="to_time" placeholder="XXXX/XX/XX">
+        <input type="text" name="since_time" placeholder="XXXX/XX/XX">
+        <input type="text" name="until_time" placeholder="XXXX/XX/XX">
         <input type="submit" value="save">
       </form>
     <p>チェックイン数: <%= @range_indexs.size %></p>
