総距離module導入

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,12 +2,15 @@
   <div class="info">
     <h1><%= @title %></h1>
     <p>【<%= @since_time %>】 - 【<%= @until_time %>】</p>
-      <form action="/index" method="get">
-        <input type="text" name="since_time" placeholder="XXXX/XX/XX">
-        <input type="text" name="until_time" placeholder="XXXX/XX/XX">
-        <input type="submit" value="save">
-      </form>
-    <p>チェックイン数: <%= @range_indexs.size %></p>
+    <form action="/index" method="get">
+      <input type="text" name="since_time" placeholder="XXXX/XX/XX">
+      <input type="text" name="until_time" placeholder="XXXX/XX/XX">
+      <input type="submit" value="save">
+    </form>
+    <p>
+      チェックイン数: <%= @range_indexs.size %><br>
+      移動総距離: <%= @sum_distance %>km
+    </p>
     <ol type="A">
       <% @range_indexs.each do |point| %>
       <li><%= point[:name] %><br><small><%= point[:time] %></small></li>
@@ -32,6 +35,23 @@ function initMap() {
       label: labels[i % labels.length]
     });
   });
+
+// API利用の距離
+  // var TOKYO = new google.maps.LatLng(35.681382, 139.76608399999998); // 東京駅
+  // var OSAKA = new google.maps.LatLng(34.701909, 135.49497700000006); // 大阪駅
+  // var HAKATA = new google.maps.LatLng(35.871435, 128.601445);
+  // var HANOI =  new google.maps.LatLng(21.027764, 105.83416);
+  // var TAIPEI =  new google.maps.LatLng(25.032964, 121.565427);
+  // var TOKYO = new google.maps.LatLng(35.681382, 139.76608399999998); // 東京駅
+  // var INDEXS = [
+  //   TOKYO, OSAKA, HAKATA, HANOI, TAIPEI, TOKYO
+  // ]
+  // var distance = google.maps.geometry.spherical.computeLength(INDEXS);
+  // new google.maps.InfoWindow({
+  //   content: distance + ' m',
+  //   position: {lat: 28, lng: 120}
+  // }).open(map);
+
   // ルート線を作成
   var flightPath = new google.maps.Polyline({
     path: locations,
