チェックインがない場合の処理

--- a/views/index.erb
+++ b/views/index.erb
@@ -7,6 +7,7 @@
       <input type="text" name="until_time" placeholder="XXXX/XX/XX">
       <input type="submit" value="save">
     </form>
+    <% if @range_indexs %>
     <p>
       チェックイン数: <%= @range_indexs.size %><br>
       移動総距離: <%= @sum_distance %>km
@@ -16,6 +17,7 @@
       <li><%= point[:name] %><br><small><%= point[:time] %></small></li>
       <% end %>
     </ol>
+    <% end %>
   </div>
   <div class="frame">
     <div id="map"></div>
