--- a/views/index.erb
+++ b/views/index.erb
@@ -8,8 +8,8 @@
       <input type="submit" value="save">
     </form>
     <p>
-      チェックイン数: <%= @range_indexs.size %><br>
-      移動総距離: <%= @sum_distance %>km
+      Check-in: <%= @range_indexs.size %><br>
+      Total: <%= @sum_distance %>km
     </p>
     <ol type="A">
       <% @range_indexs.each do |point| %>
