--- a/views/index.erb
+++ b/views/index.erb
@@ -1,59 +1,24 @@
-<div class="content">
-  <div class="info">
-    <h1><%= @title %></h1>
-    <p>【<%= @since_time %>】 - 【<%= @until_time %>】</p>
-    <form action="/index" method="get">
-      <input type="text" name="since_time" placeholder="XXXX/XX/XX">
-      <input type="text" name="until_time" placeholder="XXXX/XX/XX">
-      <input type="submit" value="save">
-    </form>
-    <% if @range_indexes %>
-    <p>
-      Check-in: <%= @range_indexes.size %><br>
-      Total: <%= @sum_distance %>km
-    </p>
-    <ol type="A">
-      <% @range_indexes.each do |point| %>
-      <li><%= point["name"] %><br><small><%= point["time"] %></small></li>
-      <% end %>
-    </ol>
-    <% end %>
-    <a href="/reload">更新</a>
-  </div>
-  <div class="frame">
-    <div id="map"></div>
+<div class="container-fluid" style="height: calc(100% - 74px);">
+  <div class="row" style="height: 100%;">
+    <nav style="overflow: scroll;" class="col-md-2 d-none d-md-block bg-light sidebar pt-3">
+      <div class="sidebar-sticky">
+        <% if @range_indexes %>
+        <p>
+          Check-in: <%= @range_indexes.size %><br>
+          Total: <%= @sum_distance %>km
+        </p>
+        <ol type="A">
+          <% @range_indexes.each do |point| %>
+          <li><%= point["name"] %><br><small><%= point["time"] %></small></li>
+          <% end %>
+        </ol>
+        <% end %>
+      </div>
+    </nav>
+
+    <main role="main" style="height: 100%; padding: 0px;" class="main col-md-9 col-lg-10">
+      <div id="map"></div>
+    </main>
   </div>
 </div>
-
-<script>
-function initMap() {
-  var map = new google.maps.Map(document.getElementById('map'), {
-    zoom: 4,
-    center: {lat: 28, lng: 120}
-  });
-  var labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
-  var markers = locations.map(function(location, i) {
-    return new google.maps.Marker({
-      position: location,
-      label: labels[i % labels.length]
-    });
-  });
-
-  // ルート線を作成
-  var flightPath = new google.maps.Polyline({
-    path: locations,
-    geodesic: true,
-    strokeColor: '#FF0000',
-    strokeOpacity: 1.0,
-    strokeWeight: 2
-  });
-  flightPath.setMap(map);
-  var markerCluster = new MarkerClusterer(map, markers,
-    {imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m'});
-  }
-  var locations = <%= @range_indexes.to_json %>
-  </script>
-
-  <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-  <script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-XvwqNLvHjLQKRHDVNuAHPodtf8WUwz4&libraries=geometry&callback=initMap"></script>
+<%= erb :js %>
