--- a/views/header.erb
+++ b/views/header.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="/"><%= @title %></a>
+  <a class="navbar-brand" href="/"><h3><%= @title %></h3></a>
   <% if session[:access_token] %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -12,10 +12,12 @@
     </ul>
     <div class="mt-2 mt-md-0">
       <form action="/index" method="get" class="form-inline">
-        <input class="form-control mr-sm-2" type="text" name="since_time" placeholder="XXXX/XX/XX">
-        <input class="form-control mr-sm-2" type="text" name="until_time" placeholder="XXXX/XX/XX">
-        <button class="btn btn-outline-success my-2 my-sm-0 mr-sm-2" type="submit">Search</button>
-        <a class="btn btn-outline-success my-2 my-sm-0" href="/reload">Reload</a>
+        <div class="input-group m-2">
+          <input class="form-control" type="date" name="since_time">
+          <input class="form-control" type="date" name="until_time">
+        </div>
+        <button class="btn btn-outline-success m-2" type="submit">Search</button>
+        <a class="btn btn-outline-success" href="/reload">Reload</a>
       </form>
     </div>
     <% end %>
