--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name=”robots” content=”noindex”>
   <meta name="description" content="Tadoryo9はfacebookのチェックインの場所をGoogleMapに表示させるアプリです。">
+  <link rel="icon" type="image/png" href="earth.png">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="styles.css" type="text/css" rel="stylesheet" />
 </head>
