--- a/views/header.erb
+++ b/views/header.erb
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <a class="navbar-brand" href="/"><h3>Tadoryo9</h3></a>
-  <% if session[:access_token] %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+  <% if session[:access_token] %>
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item text-white">
@@ -20,6 +20,14 @@
         <a class="btn btn-outline-success" href="/reload">Reload</a>
       </form>
     </div>
-    <% end %>
   </div>
+  <% else %>
+  <div class="collapse navbar-collapse" id="navbarCollapse">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item text-white">
+        <a class="nav-link" href="/about">About</a>
+      </li>
+    </ul>
+  </div>
+  <% end %>
 </nav>
