--- a/views/about.erb
+++ b/views/about.erb
@@ -1,14 +1,20 @@
-<section>
-  <div class="hukidasi">
-    <h1>Tadoryo9とは？</h1>
-    <p>
-      Tadoryo9は多動力を調べるアプリです。<br class="sp-none">
-      指定した期間のFacebookの投稿の位置情報を<br class="sp-none">
-      時系列順にルートの形でGoogleマップ上に表示させます。<br class="sp-none">
-      またチェックインの数と移動した距離を算出します。<br>
-      あなたの多動力。調べてみませんか？
-    </p>
-  </div>
-  <img class="person" src="person.png" alt="person">
-
-</section>
+<section class="about-section">
+  <h2 style="margin: 25px 0px;">Tadoryo9とは？</h2>
+  <h5>Tadoryo9は多動力を調べるアプリです。<h5>
+    <h5>指定した期間のFacebookの投稿の位置情報を<h5>
+      <h5>時系列順にルートの形でGoogleマップ上に表示させます。<h5>
+        <h5>またチェックインの数と移動した距離を算出します。<h5>
+          <h5>あなたの多動力。調べてみませんか？</h5>
+          <h2 style="margin: 25px 0px;">How to use</h2>
+          <ol>
+            <h5><li>ログイン</li></h5>
+            <h5><li>ヘッダーにあるフォームに調べたい期間を指定</li></h5>
+            <h5><li>searchボタン</li></h5>
+            <h5><li>解析中</li></h5>
+            <h5><li>
+              Reload<br>
+              解析終了済みなら表示<br>
+              非表示の場合、再Reload
+            </li></h5>
+          </ol>
+        </section>
