--- a/views/index.erb
+++ b/views/index.erb
@@ -1,36 +1,39 @@
-<% if !File.file?("#{@user_id}.json") && !File.file?("#{@user_id}.txt") %>
-<div style="margin-bottom: 0px; text-align: center;" class="alert alert-warning" role="alert">
-  データ解析中
-</div>
-<% elsif @range_indexes.empty? %>
-<div style="margin-bottom: 0px; text-align: center;" class="alert alert-danger" role="alert">
-  該当なし
-</div>
-<% else %>
+<div style="height: calc(100% - 72px);">
+<section class="main-section">
+<% if File.file?("#{@user_id}.json") && File.file?("#{@user_id}.txt") %>
 <div style="margin-bottom: 0px; text-align: center;" class="alert alert-success" role="alert">
   データ解析完了
 </div>
+<div class="container-fluid" style="height: calc(100% - 52px); padding: 0;">
+<% else %>
+<div class="container-fluid" style="height: 100%; padding: 0;">
 <% end %>
-<div class="container-fluid" style="height: calc(100% - 124px);">
-  <div class="row" style="height: 100%;">
-    <nav style="overflow: scroll;" class="col-md-3 d-none d-md-block bg-light sidebar pt-3">
-      <div class="sidebar-sticky">
-        <% if @range_indexes %>
-        <h5>Check-in: <%= @range_indexes.size %></h5>
-        <h5>Total: <%= @sum_distance %>km</h5>
-        <ol type="A">
-          <% @range_indexes.each do |point| %>
-          <li><%= point["name"] %><br><small><%= point["time"] %></small></li>
-          <% end %>
-        </ol>
+<div class="row" style="height: 100%;">
+  <nav style="overflow: scroll;" class="col-md-3 d-none d-md-block bg-light sidebar pt-3">
+    <div class="sidebar-sticky">
+      <% if @range_indexes %>
+      <h5>Check-in: <%= @range_indexes.size %></h5>
+      <h5>Total: <%= @sum_distance %>km</h5>
+      <ol type="A">
+        <% @range_indexes.each do |point| %>
+        <li><%= point["name"] %><br><small><%= point["time"] %></small></li>
         <% end %>
-      </div>
-    </nav>
-
-    <main role="main" style="height: 100%; padding: 0px;" class="main col-md-9">
-      <div id="map"></div>
-    </main>
+      </ol>
+      <% end %>
+    </div>
+  </nav>
+  <main role="main" style="height: 100%; padding: 0px;" class="main col-md-9">
+    <div id="map"></div>
+  </main>
+</div>
+</div>
+<div class="d-sm-none">
+  <div class="bg-dark py-1 d-block" style="height: 56px;">
+    <%= erb :carousel %>
   </div>
 </div>
-<%= erb :carousel %>
+</section>
+</div>
+
+
 <%= erb :js %>
