--- a/views/carousel.erb
+++ b/views/carousel.erb
@@ -1,4 +1,4 @@
-  <% if @range_indexes %>
+  <% unless @range_indexes.empty? %>
   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <% @range_indexes.each_with_index do |point, i| %>
