--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,7 @@
 <% else %>
 <div class="container-fluid" style="height: 100%; padding: 0;">
 <% end %>
-<div class="row" style="height: 100%;">
+<div class="row" style="height: 100%; width: 100%; margin: 0px;">
   <nav style="overflow: scroll;" class="col-md-3 d-none d-md-block bg-light sidebar pt-3">
     <div class="sidebar-sticky">
       <% if @range_indexes %>
