--- a/views/index.erb
+++ b/views/index.erb
@@ -1,47 +1,39 @@
-<div class="content">
-  <div class="info">
-    <h1><%= @title %></h1>
-    <p>【<%= @from_time %>】 - 【<%= @to_time %>】</p>
-    <p>チェックイン数: <%= @range_indexs.size %></p>
-    <ol type="A">
-      <% @range_indexs.each do |point| %>
-      <li><%= point[:name] %><br><small><%= point[:time] %></small></li>
+<div style="height: calc(100% - 68px);">
+<section class="main-section">
+<% if !@checkins.empty? %>
+<div style="margin-bottom: 0px; text-align: center;" class="alert alert-success" role="alert">
+  データ解析完了
+</div>
+<div class="container-fluid" style="height: calc(100% - 52px); padding: 0;">
+<% else %>
+<div class="container-fluid" style="height: 100%; padding: 0;">
+<% end %>
+<div class="row" style="height: 100%; width: 100%; margin: 0px;">
+  <nav style="overflow: scroll;" class="col-md-3 d-none d-md-block bg-light sidebar pt-3">
+    <div class="sidebar-sticky">
+      <% if @checkins %>
+      <h5>Check-in: <%= @checkins.size %></h5>
+      <h5>Total: <%= @sum_distance %>km</h5>
+      <ol type="A">
+        <% @checkins.each do |point| %>
+        <li><%= point["name"] %><br><small><%= point["time"] %></small></li>
+        <% end %>
+      </ol>
       <% end %>
-    </ol>
-  </div>
-  <div class="frame">
+    </div>
+  </nav>
+  <main role="main" style="height: 100%; padding: 0px;" class="main col-md-9">
     <div id="map"></div>
+  </main>
+</div>
+</div>
+<div class="d-md-none">
+  <div class="bg-dark py-1 d-block" style="height: 56px;">
+    <%= erb :carousel %>
   </div>
 </div>
+</section>
+</div>
 
-<script>
-function initMap() {
-  var map = new google.maps.Map(document.getElementById('map'), {
-    zoom: 4,
-    center: {lat: 28, lng: 120}
-  });
-  var labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
-  var markers = locations.map(function(location, i) {
-    return new google.maps.Marker({
-      position: location,
-      label: labels[i % labels.length]
-    });
-  });
-  // ルート線を作成
-  var flightPath = new google.maps.Polyline({
-    path: locations,
-    geodesic: true,
-    strokeColor: '#FF0000',
-    strokeOpacity: 1.0,
-    strokeWeight: 2
-  });
-  flightPath.setMap(map);
-  var markerCluster = new MarkerClusterer(map, markers,
-    {imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m'});
-  }
-  var locations = <%= @range_indexs.to_json %>
-  </script>
 
-  <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-  <script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-XvwqNLvHjLQKRHDVNuAHPodtf8WUwz4&libraries=geometry&callback=initMap"></script>
+<%= erb :js %>
