--- a/views/top.erb
+++ b/views/top.erb
@@ -14,5 +14,6 @@
   <div class="footer-box">
     <a href="/rule">利用規約</a>
     <a href="/policy">プライバシーポリシー</a>
+    <a href="/admin">管理画面</a>
   </div>
   </nav>
