管理画面追加

--- a/views/admin.erb
+++ b/views/admin.erb
@@ -13,6 +13,10 @@
           </div>
         </nav>
         <main role="main" style="height: 100%; padding: 0px;" class="main col-md-9">
+          <h1>管理画面でできること</h1>
+          <p>利用したユーザ数</p>
+          <p>そのユーザーの最後に検索したチェックイン</p>
+          <p>以上を確認できます。</p>
         </main>
       </div>
     </div>
