--- a/views/users.erb
+++ b/views/users.erb
@@ -1,1 +1,33 @@
-<h1><%= @user.name %></h1>
+<div style="height: calc(100% - 68px);">
+  <section class="main-section">
+    <div class="container-fluid" style="height: 100%; padding: 0;">
+      <div class="row" style="height: 100%; width: 100%; margin: 0px;">
+        <nav style="overflow: scroll;" class="col-md-3 d-none d-md-block bg-light sidebar pt-3">
+          <div class="sidebar-sticky">
+            <h2>ユーザー数: <%= @user_count %></h2>
+            <ul>
+              <% @users.each do |user| %>
+              <li><a href="/admin/<%= user.id %>"><%= user.name %></a></li>
+              <% end %>
+            </ul>
+          </div>
+        </nav>
+        <main role="main" style="height: 100%; padding: 20px;" class="main col-md-9">
+          <h1><%= @user.name %></h1>
+          <table>
+            <tr>
+              <th>Checkin</th>
+              <th>Time</th>
+            </tr>
+            <% @checkins.each do |checkin| %>
+            <tr>
+              <td><%= checkin.name %></td>
+              <td><%= checkin.time %></td>
+            </tr>
+            <% end %>
+          </table>
+        </main>
+      </div>
+    </div>
+  </section>
+</div>
